Avoid showing overflow for quiz pages (BL-9952/BL-9823)

--- a/src/BloomBrowserUI/templates/template books/Activity/simpleComprehensionQuiz.less
+++ b/src/BloomBrowserUI/templates/template books/Activity/simpleComprehensionQuiz.less
@@ -36,7 +36,6 @@
         // starts a new stacking context, so the z-index:-1 shadows behind the check boxes
         // are not hidden by the non-transparent bloom-page.
         z-index: 0;
-        height: 2.85em; // prevent overflow on quiz page in device layout (BL-9823)
 
         input {
             // This input is sized to fill the space of the circle we draw around the
